# yandex_ai_panorams_find

./: .gitattributes  .gitignore  pyproject.toml  results_debug.csv  vast_ai_setup.sh
index/: crops.parquet  model.json  ocr_texts.txt  osm_places.jsonl  tfidf_vectorizer.joblib
scripts/: 01_download_panoramas.py  02_scan_bbox_yandex.py  03_prepare_dataset.py  04_build_index.py  04_extract_ocr.py  05_query.py  05_train_model.py  06_build_index.py  07_query_improved.py  improved_ocr.py  monitor_gpu.py  parse_osm_to_poi.py  validate_index.py
